--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "firebase": "^7.16.1",
     "quasar": "^1.0.0",
+    "vue-easy-lightbox": "^0.14.0",
     "vue-i18n": "^8.0.0"
   },
   "devDependencies": {
